assets/css/beautifuljekyll.css
--- layout: null --- @import url("pygment_highlights.css");

:root {

  /* config file CSS variables */
  --page-col: {
      {
      site.page-col | default: "#FFFFFF"
    }
  }

  ;

  --text-col: {
      {
      site.text-col | default: "#404040"
    }
  }

  ;

  --link-col: {
      {
      site.link-col | default: "#008AFF"
    }
  }

  ;

  --hover-col: {
      {
      site.hover-col | default: "#0085A1"
    }
  }

  ;

  --navbar-col: {
      {
      site.navbar-col | default: "#EAEAEA"
    }
  }

  ;

  --navbar-text-col: {
      {
      site.navbar-text-col | default: "#404040"
    }
  }

  ;

  --navbar-border-col: {
      {
      site.navbar-border-col | default: "#DDDDDD"
    }
  }

  ;

  --footer-col: {
      {
      site.footer-col | default: "#EAEAEA"
    }
  }

  ;

  --footer-text-col: {
      {
      site.footer-text-col | default: "#777777"
    }
  }

  ;

  --footer-link-col: {
      {
      site.footer-link-col | default: "#404040"
    }
  }

  ;

  --footer-hover-col: {
      {
      site.footer-hover-col | default: "#0085A1"
    }
  }

  ;

  /* common CSS variables */
  --body-font: 'Lora',
  'Times New Roman',
  serif;
  --header-font: 'Open Sans',
  'Helvetica Neue',
  Helvetica,
  Arial,
  sans-serif;
  --mid-col: #808080;
}

/* --- General --- */

html {
  font-size: 100%
}

body {
  font-family: var(--body-font);
  font-size: 1.125rem;
  color: var(--text-col);
  position: relative;
  background-color: var(--page-col);

    {
    % if site.page-img %
  }

  background-image: url({{ site.page-img | relative_url }});
  background-attachment: fixed;

    {
    % endif %
  }

  overflow-wrap: break-word;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

body>main {
  flex: 1;
}

p {
  line-height: 1.5;
  margin: 1.875rem 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--header-font);
  font-weight: 800;
  line-height: 1.1;
}

h1 {
  font-size: 2.25rem;
}

h2 {
  font-size: 1.875rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.125rem;
}

h1,
h2,
h3,
h4 {
  margin-top: 1.25rem;
}

a {
  color: var(--link-col);
}

a:hover,
a:focus {
  color: var(--hover-col);
}

blockquote {
  color: var(--mid-col);
  font-style: italic;
}

blockquote p:first-child {
  margin-top: 0;
}

.jumbotron {
  background: #EEE;
}

hr.small {
  max-width: 6.25rem;
  margin: 1rem auto;
  border-width: 0.25rem;
  border-color: inherit;
  border-radius: 0.1875rem;
}

/* fix in-page anchors to not be behind fixed header */
:target:before {
  content: "";
  display: block;
  height: 3.125rem;
  /* navbar height */
  margin: -3.125rem 0 0;
}

.hideme {
  display: none;
}

::-moz-selection {
  color: var(--page-col);
  background-color: var(--hover-col);
  text-shadow: none;
}

::selection {
  color: var(--page-col);
  background-color: var(--hover-col);
  text-shadow: none;
}

img::selection {
  color: var(--hover-col);
  background: transparent;
}

img::-moz-selection {
  color: var(--hover-col);
  background: transparent;
}

img {
  max-width: 100%;
}

.linked-section {
  padding-top: 3.75rem;
  margin-top: -1.5625rem;
}

/* Comments */

.disqus-comments {
  margin-top: 1.875rem;
}

@media (min-width: 768px) {
  .disqus-comments {
    margin-top: 2.5rem;
  }
}

/* --- Navbar --- */

.navbar-custom {
  background-color: var(--navbar-col);
  border-bottom: 1px solid var(--navbar-border-col);
  font-family: var(--header-font);

    {
    % if site.navbar-img %
  }

  background-image: url({{ site.navbar-img | relative_url }});
  background-attachment: fixed;

    {
    % endif %
  }

  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}

.navbar-custom,
.navbar-custom.top-nav-short,
.navbar-custom.top-nav-short-permanent {
  padding-top: 0;
  padding-bottom: 0;
}

.navbar-custom .navbar-brand {
  line-height: 1.5;
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
  font-size: 1.125rem;
}

.navbar-custom .navbar-brand-logo {
  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}

.navbar-custom .navbar-brand-logo,
.navbar-custom.top-nav-short .navbar-brand-logo,
.navbar-custom.top-nav-short-permanent .navbar-brand-logo {
  padding-top: 0.3125rem;
  padding-bottom: 0.3125rem;
}

.navbar-custom .navbar-brand-logo img {
  -webkit-transition: height .5s ease-in-out;
  -moz-transition: height .5s ease-in-out;
  transition: height .5s ease-in-out;
}

.navbar-custom .navbar-brand-logo img,
.navbar-custom.top-nav-short .navbar-brand-logo img,
.navbar-custom.top-nav-short-permanent .navbar-brand-logo img {
  height: 2.5rem;
}

.navbar-custom .navbar-nav .nav-item {
  text-transform: uppercase;
  font-size: 0.8125rem;
  letter-spacing: 0.0625rem;
}

.navbar-custom .navbar-nav .nav-link {
  line-height: 1.25rem;
  padding-top: 0.9375rem;
  padding-bottom: 0.9375rem;
}

.navbar-custom .navbar-brand {
  font-weight: 800;
  color: #00008B !important;
}

.navbar-custom .navbar-nav .nav-link {
  font-weight: 800;
  color: #165DFF !important;
}

.navbar-toggler {
  font-size: 1rem;
  margin: 0.5rem 0;
}

.navbar-custom .navbar-toggler:focus,
.navbar-custom .navbar-toggler:hover {
  background-color: initial;
}

.navbar-custom .navbar-toggler[aria-expanded="true"] {
  background-color: rgba(0, 0, 0, 0.2);
}

.dropdown-toggle::after {
  border-width: 0.4em;
}

@media (min-width: 1200px) {
  .navbar-custom {
    padding-top: 1.25rem;
    padding-bottom: 1.25rem;
  }

  .navbar-custom .navbar-brand-logo {
    padding-top: 0;
    padding-bottom: 0;
  }

  .navbar-custom .navbar-brand-logo img {
    height: 3.125rem;
  }

  .navbar-expand-xl .navbar-nav .nav-link {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }

  .navbar-expand-xl .navbar-nav .nav-item:not(.dropdown):last-child .nav-link {
    padding-right: 0;
  }
}
/* ... */

